--- a/index.Rmd
+++ b/index.Rmd
@@ -6,6 +6,8 @@ links:
     url: "https://github.com/neelschaudhari000"
   - label: '<i class="fab fa-linkedin fa-lg"></i> LinkedIn'
     url: "https://www.linkedin.com/in/neelschaudhari/"
+  - label: '<i class="fas fa-envelope fa-lg"></i> Email'
+    url: "NC0787894@outlook.com"
 output:
   postcards::trestles
 site: distill::distill_website
@@ -35,13 +37,13 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <span class = "title"> Welcome!!</span> 
 <span class = "text">  
-I graduated recently from St. Clair College. Now, I have adequate skills to solve any analytical problem using programming and visualization tools. Creating an interactive dashboard is my strength as it becomes easy for audiences or non-programming backgrownd people to understand the analytical concepts.</span> 
+I have adequate skills to solve analytical problems using programming and visualization tools. Creating an interactive dashboard is my strength as it becomes easy for audiences or non-programming backgrownd people to understand the analytical concepts.</span> 
 
 <span class = "text"> 
 Although Data Analytics gives me everything to explore data, Mathematical Statistics has taught me basics and advanced concepts which are used in every analytical problems.</span>
 
 <span class = "text"> 
-Having these skills are fruitful for me to solve the real-world analytical problem at Windsor Regional Hospital. Not only at work place, but also help me to complete my projects with ease.</span> 
+Having these skills are fruitful for me to solve the real-world analytical problem at Windsor Regional Hospital. These skills also help me to complete my projects with ease.</span> 
 
 <span class = "text"> 
 In addition to these, I am teaching Statistics (basic statistics (mean, variance, correlation, covariance, etc.), advanced statistics (Distributions such as Normal distribution and t-distributions)) as well as Data Analytics (Exploratory Data Analysis, Data cleaning, Data Mining, Data Visualization using Rstudio, Python, SQL, and Tableau) at Varsity Tutor.</span>
@@ -142,11 +144,11 @@ In addition to these, I am teaching Statistics (basic statistics (mean, variance
 <p class = "grad-location"> Gujarat University, Gujarat, India </p> </li>
 
 <li class = "grad-item3"> Data Analytics Intern at Windsor Regional Hospital,
-2021 - present<br>
+2022 - present<br>
 <p class = "grad-location"> Windsor Regional Hospital, Ontario, Canada</p> </li>
  
 <li class = "grad-item2"> Tutor(Statistics and Data Analytics) at Varsity,
-2021 - present<br>
+2022 - present<br>
 <p class = "grad-location"> Ontario, Canada</p> </li>
 
 
