--- a/index.Rmd
+++ b/index.Rmd
@@ -143,6 +143,8 @@ In addition to these, I am teaching Statistics (basic statistics (mean, variance
 2017 - 2020 <br> 
 <p class = "grad-location"> Gujarat University, Gujarat, India </p> </li>
 
+<span class = "columnname"> Education and Experience </span>
+
 <li class = "grad-item3"> Data Analytics Intern at Windsor Regional Hospital,
 2022 - present<br>
 <p class = "grad-location"> Windsor Regional Hospital, Ontario, Canada</p> </li>
