--- a/_projects/2022-07-24-Car Following Data-Driven Model/Car Following Data-Driven Model.Rmd
+++ b/_projects/2022-07-24-Car Following Data-Driven Model/Car Following Data-Driven Model.Rmd
@@ -5,7 +5,6 @@ description: |
 author:
   - name: Neel Chaudhari
     url: {}
-
 date: 07-13-2022
 output:
   distill::distill_article:
@@ -13,6 +12,7 @@ output:
     highlight: kate
     toc: true
     toc_depth: 4
+preview: "figs/carfollowing.jpg"
 ---
 
 ```{r setup, include=FALSE}
